# vulkanFun

./: CMakeLists.txt  README.md  vulkanFun.sln
hlsl_test/: hlsl_test_shaders.hlsl  run.bat
hlsl_test/output/: frag.spv  shader.frag  shader.vert  vert.spv
vulkanFun/: file_helpers.h  main.cpp  trace.h  vertex.h  vk_renderer.cpp  vk_renderer.h  vulkanFun.vcxproj  vulkanFun.vcxproj.filters
vulkanFun/shaders/: shader.vert
